# krunner-kdbx

./: .gitignore  LICENSE  README.md  config.json  install.sh  krunner-kdbx.desktop  krunner-plugininstallerrc  org.kde.krunner_kdbx.service  pyproject.toml  uninstall.sh
krunner_kdbx/: __main__.py  clipboard.py  helper.py  runner.py
